fix: page title on mobile

--- a/src/scss/global/_global.scss
+++ b/src/scss/global/_global.scss
@@ -34,7 +34,12 @@ pre {
 	.entry-footer {
 		@apply mx-auto px-0;
 		max-width: theme( 'layout.contentSize' );
+
+		@screen max-tablet-portrait {
+			@apply px-16;
+		}
 	}
+
 }
 
 .page-header {
